--- a/package.json
+++ b/package.json
@@ -12,17 +12,27 @@
   "dependencies": {
     "@clerk/nextjs": "^6.31.4",
     "@clerk/themes": "^2.4.13",
+    "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "^5.21.1",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.540.0",
     "next": "15.5.0",
     "prisma": "^5.21.1",
     "react": "19.1.0",
+    "react-day-picker": "^9.9.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "react-hook-form": "^7.62.0",
+    "react-number-format": "^5.4.4",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
